Change border colour for moi image on dark mode; Fix speech bubble colour on dark mode

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -158,39 +158,6 @@ body.with-mouse-input #greeting:hover {
     margin-top: 0.85rem;
 }
 
-.speech-bubble {
-	position: relative;
-	background: #D7827D;
-	border-radius: 0.4em;
-
-    left: 1.25rem;
-    text-align: center;
-    color: #252135;
-
-    border: 1px solid #D7827D;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 0 0.85rem 0 0.85rem;
-    margin: 1px;
-}
-
-.speech-bubble:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	/* top: 50%; */
-    top: 3.8rem;
-	width: 0;
-	height: 0;
-	border: 0.5em solid transparent;
-	border-right-color: #D7827D;
-	border-left: 0;
-	margin-top: -0.5em;
-	margin-left: -0.5em;
-}
-
 #moi {
     border-radius: 50%;
     width: 12rem;
@@ -274,4 +241,16 @@ body.with-mouse-input #moi:hover {
 .dark-mode a:hover {
     text-decoration: underline;
     color: #F07933;
+}
+
+.dark-mode #moi {
+    border-color: #EB9A97;
+}
+
+.dark-mode .header-speech-bubble {
+    background-color: #EB9A97;
+}
+
+.dark-mode .arrow-down {
+    border-top-color: #EB9A97;
 }
